increase sonar code coverage
